fixed mime-types for pdf

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -7,7 +7,7 @@ Let Andy know if you spot problems or have ideas for improvement.
 <table>
   <tr>
     <td width=500>
-      Coordination and reporting for BAMRU Events (meetings, trainings, operations).<p></p>
+      Time-tracking and coordination for BAMRU Events (meetings, trainings, operations).<p></p>
       Note:<br/>
       - Event data is re-generated periodically.  Edits will not be retained.<br/>
       - This prototype works best on Chrome, second best on Firefox.  <b>IE9 will not work.</b>
