fixed events bug

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -10,7 +10,8 @@ Let Andy know if you spot problems or have ideas for improvement.
       Time-tracking and coordination for BAMRU Events (meetings, trainings, operations).<p></p>
       Note:<br/>
       - Event data is re-generated periodically.  Edits will not be retained.<br/>
-      - This prototype works best on Chrome, second best on Firefox.  <b>IE9 will not work.</b>
+      - This prototype works on Chrome/Firefox, <b>but not IE.</b><br/>
+      - The final version will work on IE9+.
     </td>
     <td>
       <div style='margin-left: 40px;'>
