--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -20,6 +20,19 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
   </tr>
 </table>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Guests</h3>
+<table>
+  <tr>
+    <td width=500>
+      Search/browse/sort the BAMRU guest list.<p></p>
+    </td>
+    <td>
+      <div style='margin-left: 40px;'>
+        <%= link_to guests_url, guests_path  %>
+      </div>
+    </td>
+  </tr>
+</table>
 <p></p>
 <h3 width=100% style='background: grey; padding: 3px; color: white;'>Mobile</h3>
 <table>
