--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -11,7 +11,7 @@
             <input id="filter-clear-button" type="submit" value="Clear"/>
           </td>
           <td align=right>
-            <%= link_to("Create a Guest", member_certs_path(current_member)) %>
+            <%= link_to("Create a Guest", new_guest_path()) %>
           </td>
         </tr>
       </table>
