--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -10,7 +10,7 @@
 </style>
 
 <div id=x_container>
-  <div id=<%= @member.non_standard_records? ? "x_wide_body" : "x_body" %>>
+  <div id="x_wide_body">
   <div id=x_header>
     <table width=100%><tr>
       <td align=left width=33%>Member Edit: <b><%= @member_name %></b></td>
