--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -31,6 +31,7 @@
     <div id=mem_left_col>
       <%= simple_form_for @guest, :url => "/guests/#{@guest.id}" do |gst| %>
         <%= gst.input  :full_name %>
+        <%= gst.hidden_field :type, value: 'G' %>
         <%=  gst.simple_fields_for :phones do |phn| %>
           <%= phn.input :number %>
         <% end %>
