--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -38,7 +38,7 @@
       <% end %>
     </div>
     <div id=x_footer style='font-size: 10px;'>
-      <%= link_to("Delete Guest", member_path(@guest), :confirm => "Are you sure?", :method => :delete) %>
+      <%= link_to("Delete Guest", guest_path(@guest), :confirm => "Are you sure?", :method => :delete) %>
     </div>
   </div>
 </div>
