--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -28,6 +28,12 @@
       <%= raw show_oot_label(@guest) %>
       <%= raw @guest.all_assoc %><p></p>
       <p></p>
+      <b>Meetings (<%= @meetings.count %>)</b><br/>
+      <%= raw show_events(@meetings) %>
+      <p></p>
+      <b>Trainings (<%= @trainings.count %>)</b><br/>
+      <%= raw show_events(@trainings) %>
+      <p></p>
     </div>
     <div id=mem_right_col style="text-align: center;">
       <% unless @guest.photos.length > 0 %><br/><p></p><b>Photos:</b><br/>TBD<% end %>
