updated guest index caching

--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div id=x_single_col>
 
-      <% cache("guests_table-#{@fragment_type}") do %>
+      <% cache("guest_index_table-#{@fragment_type}") do %>
         <table id="myTable" class="tablesorter">
           <thead>
           <tr>
