reformatted new-photos page

--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -9,9 +9,8 @@ Let Andy know if you spot problems or have ideas for improvement.
     <td width=500>
       Time-tracking and coordination for BAMRU Events (meetings, trainings, operations).<br/>
       - Event data is re-generated periodically.  Edits will not be retained.<br/>
-      - This prototype works on Chrome/Firefox, <b>but not IE.</b><br/>
-      - The final version will work on IE7+
-      (using <a target="_blank" href="http://www.google.com/chromeframe">ChromeFrame</a>)
+      - This prototype works on Chrome / Firefox / Safari.
+      - It works on IE after you install the <a target="_blank" href="http://www.google.com/chromeframe">ChromeFrame</a> plugin.
     </td>
     <td  valign='middle' style='padding-left: 40px;'>
       <%= link_to events_url, '/events'  %>
