added cropping for profile photos

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,8 @@
 
 //= require events
 
+//= require jcrop
+
 @import "bamru-net.css.scss";
 @import "layout.css.scss";
 @import "certs.css.scss";
@@ -16,4 +18,5 @@
 @import "photos.css.scss";
 @import "photos.css.scss";
 @import "unit_certs.css.scss";
+
 
