--- a/app/views/photos/new_save.html.erb
+++ b/app/views/photos/new_save.html.erb
@@ -1,18 +1,36 @@
-<div style="text-align: center;">
-  <div style="width: 400px; margin: auto;">
-    <h2>New Photo</h2>
-    Add a new photo for <%= @member.full_name %>.
-    (<%= link_to "back", @path %>)
-    <p></p>
+<div style="width: 600px; text-align: center; margin: auto;">
+  <h2>Create a New Profile Photo for <%= link_to @member.full_name, @path %></h2>
+  <div style='border: 1px solid black;'>
+    <table width=100%>
+      <tr>
+        <td width=33%>
+          <div style='text-align: left; margin-left: 20px;'>
+            best photos:
+            <li>recognizable mug shot</li>
+            <li>width/height ratio of 4/3</li>
+          </div>
+        </td>
+        <td width=33% align="center" style='background: lightgreen;'>
+          like this
+          <img style='display: inline-block; vertical-align: middle;' height=50 src='/samples/jenna.jpg'/>
+        </td>
+        <td width=33%  align="center" style='background: lightpink;'>
+          not like this
+          <img  style='display: inline-block; vertical-align: middle;' height=50 src='/samples/climber.jpg'/>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <p></p>
+  <div style='width: 400px; text-align: center; margin: auto;'>
     <%= simple_form_for @photo, :url => member_photos_path(@member) do |pic| %>
       <%= pic.input :image, :label => "" %>
       <%= pic.button :submit %>
     <% end %>
-    <p></p>
-    <div style="font-size: 7pt; background-color: lightgray; padding: 10px;">
-      After clicking 'Create Photo', this dialog box may remain open for several
-      minutes if you are uploading a large file.  Max file size is 3MB.  Photos
-      with a width/height ratio of 4/3 will exactly fit in the photo display.
-    </div>
+  </div>
+  <p></p>
+  <div style="font-size: 7pt; background-color: lightgray; padding: 10px;">
+    After clicking 'Create Photo', this dialog box may remain open for several
+    minutes if you are uploading a large file.  Max file size is 3MB.
   </div>
 </div>
