--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -36,11 +36,15 @@
     <table width=100%>
       <tr valign=top>
         <td width=10%>
-          <b>1: Choose</b><p></p>
+          <b>1: Select Image File</b><p></p>
           <input id='fileChooser' type='file' name='photo[image]' />
+          <div style='margin-top: 100px; font-size: 8pt'>
+            Valid file types: jpg, jpeg, gif, png
+          </div>
         </td>
         <td width=60% style='padding:0; margin:0;'>
           <b>2: Crop</b><p></p>
+          <div id='loadingMsg' style='width:200px; background: yellow; border: 2px solid black; padding: 10px; display: none;'><b>loading...</b></div>
           <div id='imgHolder'></div>
         </td>
         <td width=30%>
