--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -9,7 +9,7 @@ Let Andy know if you spot problems or have ideas for improvement.
     <td width=500>
       Time-tracking and coordination for BAMRU Events (meetings, trainings, operations).<br/>
       - Event data is re-generated periodically.  Edits will not be retained.<br/>
-      - This prototype works on Chrome / Firefox / Safari.
+      - This prototype works on Chrome / Firefox / Safari.<br/>
       - It works on IE after you install the <a target="_blank" href="http://www.google.com/chromeframe">ChromeFrame</a> plugin.
     </td>
     <td  valign='middle' style='padding-left: 40px;'>
