get rid of reports link on meetings

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,7 +5,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>BAMRU Database Reports</b></td>
+          <td align=left><b>Unit Reports</b></td>
           <td align=right>
             Search: <input name="filter" id="filter-box" value="" maxlength="20" size="20" type="text">
             <input id="filter-clear-button" type="submit" value="Clear"/>
