added Loading label on events page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,6 +15,9 @@
     </div>
 
     <div id="x_single_col">
+      <div style='text-align: center; margin: 60px; font-size: 22px;'>
+        Loading...
+      </div>
     </div>
 
     <div id=x_footer style="font-size: 10pt;">
