--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,45 +1,53 @@
-<div id=x_container>
-  <div id=x_wide_body>
-    <div id=x_header>
-      <table width=100%>
-        <tr>
-          <td id="header_left" align=left>
-            <b>Events</b>
-          </td>
-          <td id="header_center" align=center>
-          </td>
-          <td id="header_right" align=right>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    <div id="x_single_col">
-      <div style='text-align: center; margin: 60px; font-size: 22px;'>
-        Loading...
-      </div>
-    </div>
-
-    <div id=x_footer style="font-size: 10pt;">
-    </div>
-
+<%# if true %>
+<% if (env_browser_agent == "IE") %>
+  <div style='text-align: center; margin: 60px; font-size: 22px;'>
+    On IE, this page requires the ChromeFrame Plugin.
+    <p style='height: 25px;'></p>
+    <a href="/home/chrome-frame">Learn more...</a>
   </div>
-</div>
+<% else %>
+  <div id=x_container>
+    <div id=x_wide_body>
+      <div id=x_header>
+        <table width=100%>
+          <tr>
+            <td id="header_left" align=left>
+              <b>Events</b>
+            </td>
+            <td id="header_center" align=center>
+            </td>
+            <td id="header_right" align=right>
+            </td>
+          </tr>
+        </table>
+      </div>
 
-<%= javascript_include_tag "events/all_events" %>
-<%= javascript_include_tag "#{FAYE_SERVER}/faye.js" %>
-<script>
-  window.faye_server = "<%= FAYE_SERVER %>"
-  window.sessionId   = "<%= @session_id %>"
-</script>
+      <div id="x_single_col">
+        <div style='text-align: center; margin: 60px; font-size: 22px;'>
+          Loading...
+        </div>
+      </div>
 
-<% cache('event_json_fragment') do %>
-  <script id='json_event_data' type="text/json_data">
-    <%= Event.all.to_json except: [:created_at, :updated_at] %>
+      <div id=x_footer style="font-size: 10pt;">
+      </div>
+
+    </div>
+  </div>
+
+  <%= javascript_include_tag "events/all_events" %>
+  <%= javascript_include_tag "#{FAYE_SERVER}/faye.js" %>
+  <script>
+    window.faye_server = "<%= FAYE_SERVER %>"
+    window.sessionId   = "<%= @session_id %>"
+  </script>
+
+  <% cache('event_json_fragment') do %>
+    <script id='json_event_data' type="text/json_data">
+      <%= Event.all.to_json except: [:created_at, :updated_at] %>
+    </script>
+  <% end %>
+
+  <script id='json_member_data' type="text/json_data">
+    <%= @member_json %>
   </script>
 <% end %>
-
-<script id='json_member_data' type="text/json_data">
-  <%= @member_json %>
-</script>
-
